--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ nav{
     flex-direction: row;
     justify-content: end;
     align-items: center;
+    margin: 1.2rem 2.5rem;
 }
 
 .logo{
@@ -16,22 +17,26 @@ nav{
     text-decoration: none;
     color: #222222;
     cursor: pointer;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     transition: all 0.2s ease;
 }
 
 .logo:hover{
-    font-size: 1.5rem;
+    scale: 1.03;
 }
 
 
 .contact{
-    border-radius: 50%;
+    border-radius: 4rem;
     background-color: lightgray;
-    padding: .2rem .4rem;
+    padding: .2rem .2rem .2rem .4rem;
     cursor: pointer;
-    transition: all 0.2s
+    transition: all 0.2s;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    margin-right: 1.5rem;
 }
 
 .contact p{
@@ -39,26 +44,62 @@ nav{
     text-decoration: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1rem;
+    padding-right: .2rem;
 }
 
-.contact:hover{
-    transform: rotate(-15deg);
+.contact-images img{
+    transition: all ease 0.2s;
+}
+
+.contact:hover .contact-images img{
+    transform: translateY(-26px);
 }
 
 .contact-images{
-    width: 30px;
-    height: 30px;
+    width: 22px;
+    height: 22px;
     background-color: #000;
     border-radius: 100%;
+    overflow: hidden;
 }
+
+.contact-images img{
+    width: inherit;
+    height: inherit;
+}
+
+
+.line-toggle-detectionbox{
+    width: 28.4px;
+    height: 28.4px;
+    position: relative;
+    border-radius: 100%;
+    background-color: lightgray;
+    rotate: 180deg;
+}
+
 
 .line-toggle{
     background-color: #000;
-    width: 32px;
-    height: 4px;
+    width: 22px;
+    height: 2px;
     transition: all 0.2s;
-    position: relative;
-    transform: translateY(-0.3rem);
+    position: absolute;
+    
+    bottom: 14.2px;
+    right: 14.2px;
+    transform: translateX(50%) translateY(50%);
+}
+
+
+.line-toggle::before{
+    position: absolute;
+    top: -.3rem;
+    content: "";
+    background-color: #000;
+    width: 18px;
+    height: 2px;
+    transition: all 0.2s;
 }
 
 .line-toggle::after{
@@ -66,9 +107,28 @@ nav{
     top: .3rem;
     content: "";
     background-color: #000;
-    width: 32px;
-    height: 4px;
+    width: 18px;
+    height: 2px;
     transition: all 0.2s;
+    right: 0;
+}
+ 
+
+.line-toggle-detectionbox:hover .line-toggle{
+    background-color: transparent;
+}
+.line-toggle-detectionbox:hover .line-toggle::before{
+    width: 13.5px;
+    transform: rotate(45deg);
+    top:0;
+}
+.line-toggle-detectionbox:hover .line-toggle::after{
+    width: 13.5px;
+    transform: rotate(-45deg); 
+    top: 0;
+    right: 0;
 }
 
-//wenn man über den toggle hovert soll aus den strichen ein pfeil werden 
+.toggle-expanded{
+    transform: rotate(180deg);
+}
