--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 
+.backgroundblur{
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+    height: 200%;
+    top: 0;
+    left: 0;
+    background-color: rgba(55, 55, 55, 0.7);
+    backdrop-filter: blur(4px);
+}
 *{
    margin: 0;
    padding: 0;
@@ -83,6 +93,7 @@ nav{
     background-color: #e7e7e7;
     rotate: 180deg;
     cursor: pointer;
+    z-index: 1000;
 }
 
 
@@ -139,6 +150,46 @@ nav{
 .toggle-expanded{
     transform: rotate(180deg);
 }
+
+.nav-expand-container{
+    z-index: 100;
+    display: flex;
+    position: absolute;
+    top: .5vw;
+    left: .5vw;
+    width: 99vw;
+    height: 33vh;
+    background-color: white;
+    border-radius: .5vw;
+    -webkit-border-radius: .5vw;
+    -moz-border-radius: .5vw;
+    -ms-border-radius: .5vw;
+    -o-border-radius: .5vw;
+}
+
+.nav-links-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border-radius: .5vw;
+}
+
+.nav-links2{
+    text-decoration: none;
+    list-style: none;
+    width: 20%;
+    height: 100%;
+}
+
+.nav-links {
+    text-decoration: none;
+    list-style: none;
+    border-right: #909090 solid 1px;
+    width: 20%;
+    height: 100%;
+}
+
 
 .page-wrapper{
     padding: 15vh 2vw;
