--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 
+
 .backgroundblur{
     position: absolute;
     z-index: 10;
@@ -11,11 +12,51 @@
     left: 0;
     background-color: rgba(55, 55, 55, 0.7);
     backdrop-filter: blur(4px);
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+}
+.backgroundblur.blur-toggled{
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+    background-color: rgba(55, 55, 55, 0);
+    backdrop-filter: blur(0px);
 }
 *{
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
+}
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #fff;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #1b1d1e;
+    border-radius: 20rem;
+    -webkit-border-radius: 20rem;
+    -moz-border-radius: 20rem;
+    -ms-border-radius: 20rem;
+    -o-border-radius: 20rem;
+    border: solid white .5px;
+}
+html{
+    overflow-x: hidden;
 }
 
 nav{
@@ -25,6 +66,7 @@ nav{
     align-items: center;
     margin: .5vh 2vw;
     background-color: white;
+    padding: 1vh 0;
 }
 
 .logo{
@@ -32,9 +74,15 @@ nav{
     text-decoration: none;
     color: #1D1F21;
     cursor: pointer;
-    font-size:  clamp(16px,4vw,60px);
+    font-size:  clamp(16px,4vw,24px);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     transition: all 0.2s ease;
+    z-index: 1000;
+}
+
+.logo em{
+    font-style: normal;
+    color: #909090;
 }
 
 .logo:hover{
@@ -53,6 +101,13 @@ nav{
     text-decoration: none;
     margin-right: 1.5rem;
     height: 35px;
+}
+.contact:hover{
+    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -o-transform: scale(1.05);
 }
 
 .contact p{
@@ -94,7 +149,13 @@ nav{
     rotate: 180deg;
     cursor: pointer;
     z-index: 1000;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
 }
+
 
 
 .line-toggle{
@@ -151,13 +212,24 @@ nav{
     transform: rotate(180deg);
 }
 
+.nav-expand-container.nav-expanded{
+    transform: translateY(-120%);
+    -webkit-transform: translateY(-120%);
+    -moz-transform: translateY(-120%);
+    -ms-transform: translateY(-120%);
+    -o-transform: translateY(-120%);
+
+}
+
 .nav-expand-container{
     z-index: 100;
     display: flex;
     position: absolute;
+    transform: translateY(0);
     top: .5vw;
     left: .5vw;
     width: 99vw;
+    width: calc(99vw - 10px);
     height: 33vh;
     background-color: white;
     border-radius: .5vw;
@@ -165,6 +237,15 @@ nav{
     -moz-border-radius: .5vw;
     -ms-border-radius: .5vw;
     -o-border-radius: .5vw;
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+    transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -ms-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
 }
 
 .nav-links-container{
@@ -180,6 +261,11 @@ nav{
     list-style: none;
     width: 20%;
     height: 100%;
+    cursor: pointer;
+    display: flex;
+    align-items: end;
+    justify-content: start;
+
 }
 
 .nav-links {
@@ -188,7 +274,131 @@ nav{
     border-right: #909090 solid 1px;
     width: 20%;
     height: 100%;
+    cursor: pointer;
+    display: flex;
+    align-items: end;
+    justify-content: start;
+    position: relative;
 }
+
+.nav-link-titles{
+    display: flex;
+    flex-direction: column;
+    height: 1.8rem;
+    overflow: hidden;
+    margin: 1.5vh;
+}
+.nav-link-titles p{
+    font-size: 1.8rem;
+    font-weight: 200;
+}
+
+.nav-links:hover .nav-link-titles .nav-link-1{
+    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
+}
+.nav-links:hover .nav-link-titles .nav-link-2{
+    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
+}
+.nav-links2:hover .nav-link-titles .nav-link-1{
+    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
+}
+.nav-links2:hover .nav-link-titles .nav-link-2{
+    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
+}
+
+.nav-link-1{
+    transition: all 0.1s ease;
+    -webkit-transition: all 0.1s ease;
+    -moz-transition: all 0.1s ease;
+    -ms-transition: all 0.1s ease;
+    -o-transition: all 0.1s ease;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.nav-link-2{
+    transition: all 0.1s ease;
+    -webkit-transition: all 0.1s ease;
+    -moz-transition: all 0.1s ease;
+    -ms-transition: all 0.1s ease;
+    -o-transition: all 0.1s ease;
+    color: red;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.nav-link-arrow{
+    position: relative;
+    margin: 1.5vh;
+    display: flex;
+    align-items: center;
+    width: 1.8vh;
+    height: 1.8vh;
+    flex-direction: column;
+    margin-left: auto;
+    overflow: hidden;
+}
+.nav-link-arrow img{
+    width: 1.8vh;
+    height: 1.8vh;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+}
+.nav-link-arrow-2{
+    transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+}
+
+.nav-links:hover .nav-link-arrow-1{
+    transform: translate(100% ,-100%);
+    -webkit-transform: translate(100% ,-100%);
+    -moz-transform: translate(100% ,-100%);
+    -ms-transform: translate(100% ,-100%);
+    -o-transform: translate(100% ,-100%);
+}
+.nav-links:hover .nav-link-arrow-2{
+    transform: translate(0,-100%);
+    -webkit-transform: translate(0,-100%);
+    -moz-transform: translate(0,-100%);
+    -ms-transform: translate(0,-100%);
+    -o-transform: translate(0,-100%);
+}
+.nav-links2:hover .nav-link-arrow-1{
+    transform: translate(100% ,-100%);
+    -webkit-transform: translate(100% ,-100%);
+    -moz-transform: translate(100% ,-100%);
+    -ms-transform: translate(100% ,-100%);
+    -o-transform: translate(100% ,-100%);
+}
+.nav-links2:hover .nav-link-arrow-2{
+    transform: translate(0,-100%);
+    -webkit-transform: translate(0,-100%);
+    -moz-transform: translate(0,-100%);
+    -ms-transform: translate(0,-100%);
+    -o-transform: translate(0,-100%);
+}
+
+
+
 
 
 .page-wrapper{
