--- a/style.css
+++ b/style.css
@@ -509,32 +509,38 @@ nav{
 .about-wrapper{
     display: flex;
     justify-content: center;
-    width: 100%;
-    padding: 0 10vw 4vh;
+    width: 100;
     border: red solid 1px;
     height: 70vh;
+    flex-direction: column-reverse;
+    align-items: center;
+    position: relative;
 }
 
 .about-col1{
     display: flex;
     flex-direction: column;
-    width: 20%;
-    padding: 8vh 0;
+    padding: 0 4vw;
+    z-index: 10;
 }
 .about-header{
-    background-color: red;
+    width: 100vw;
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     width: fit-content;
-    padding: .1vw .5vw;
-    border-radius: 2rem;
-    -webkit-border-radius: 2rem;
-    -moz-border-radius: 2rem;
-    -ms-border-radius: 2rem;
-    -o-border-radius: 2rem;
-    color: #fff;
+    color: #1b1d1e;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     align-content: center;
     justify-content: center;
     display: flex;
+    font-size: 20vh;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
 }
 
 .about-social-links{
@@ -552,6 +558,7 @@ nav{
     padding-top: 1.5vh;
 }
 .about-social-link-1{
+    color: #1b1d1e;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -580,6 +587,7 @@ nav{
 
 
 .about-social-link-2{
+    color: #1b1d1e;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -608,13 +616,15 @@ nav{
 
 .about-col2{
     padding: 0 2vw 0 -5vw;
+    display: flex;
+    z-index: 10;
 }
 
 
 
 
 
-.about-col3{
+.about-col2-1{
     position: relative;
     padding: 8vh 0;
 }
@@ -631,7 +641,7 @@ nav{
     -o-border-radius: 50%;
 }
 
-.about-col4{
+.about-col2-2{
     padding: 8vh 1vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     max-width: 25vw;
