--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-
+a:any-link{
+    cursor: pointer;
+    text-decoration: none;
+}
 
 .backgroundblur{
     position: absolute;
     z-index: 10;
     width: 100%;
-    height: 200%;
+    height: 1800vh;
     top: 0;
     left: 0;
     background-color: rgba(55, 55, 55, 0.7);
@@ -19,8 +22,8 @@
     -o-transition: all 0.3s ease;
 }
 .backgroundblur.blur-toggled{
-    position: absolute;
-    z-index: 10;
+    position: sticky;
+    z-index: 100;
     width: 100%;
     height: 0;
     top: 0;
@@ -64,11 +67,14 @@ body{
 }
 
 nav{
+    z-index: 100000;
+    position: sticky;
+    top: 0;
     display: flex;
     flex-direction: row;
     justify-content: end;
     align-items: center;
-    margin: .5vh 2vw;
+    padding: .5vh 2vw;
     background-color: white;
     padding: 1vh 0;
 }
@@ -223,7 +229,7 @@ nav .contact_button{
     display: flex;
     align-items: end;
     justify-content: start;
-
+    position: relative;
 }
 
 .nav-links {
@@ -240,8 +246,14 @@ nav .contact_button{
 }
 @media screen and (max-width:1250px){
     .nav-expand-container{
+        width: 100vw;
         height: 66vh;
-    }
+        border-radius: 3vw;
+        -webkit-border-radius: 3vw;
+        -moz-border-radius: 3vw;
+        -ms-border-radius: 3vw;
+        -o-border-radius: 3vw;
+}
     .nav-links-container{
         flex-direction: column;
         width: 100%;
@@ -260,13 +272,16 @@ nav .contact_button{
 .nav-link-titles{
     display: flex;
     flex-direction: column;
-    height: 1.8rem;
     overflow: hidden;
     margin: 1.5vh;
+    height: 2vh;
+    justify-content: start;
+    align-items: start;
 }
-.nav-link-titles p{
-    font-size: 1.8rem;
+.nav-link-titles a{
+    font-size: 1.8vh;
     font-weight: 200;
+    text-decoration: none;
 }
 
 .nav-links:hover .nav-link-titles .nav-link-1{
@@ -299,6 +314,7 @@ nav .contact_button{
 }
 
 .nav-link-1{
+    color: #1b1d1e;
     transition: all 0.1s ease;
     -webkit-transition: all 0.1s ease;
     -moz-transition: all 0.1s ease;
@@ -378,7 +394,7 @@ nav .contact_button{
 
 
 .page-wrapper{
-    padding: 15vh 0vw;
+    padding: 15vh 0vw 0vh 0;
     display: flex;
     flex-direction: column;
 }
@@ -709,6 +725,10 @@ nav .contact_button{
 }
 
 @media  screen and (min-width: 1440px) {
+    .about-wrapper{
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
     .about-col2-2{
         max-width: 45vw;
     }
@@ -736,7 +756,7 @@ nav .contact_button{
 
 @media screen and (max-width: 1250px) and (orientation: portrait){
     .about-col2-2 p{
-        font-size: 20px;
+        font-size: 18px;
     }
     .about-col2{
         flex-direction: column;
@@ -1309,6 +1329,55 @@ nav .contact_button{
     line-height: 150%;
 }
 
+@media screen and (max-width: 1250px){
+    .expertise-wrapper{
+        flex-direction: column;
+        font-size: 1.7vh;
+        align-items: center;
+        justify-content: center;
+    }
+    .expertise-title{
+        font-size: 2vh;
+        padding:  .2vh 1vh;
+    }
+    .expertise-card1{
+        top: 10%;
+    }
+    .expertise-card2{
+        top: 12%;
+    }
+    .expertise-card3{
+        top: 14%;
+    }
+    .expertise-card4{
+        top: 16%;
+    }
+    .expertise-col1{
+        max-width: 95%;
+    }
+    .expertise-col2{
+        width: 100%;
+    }
+    .expertise-card{
+        width: 100%;
+    }
+    .expertise-links{
+        gap: 1vh;
+    }
+    @media screen and (orientation: portrait){
+        .contact_button{
+            font-size: 1.6vh;
+            padding: .2vh 0;
+        }
+            
+        .contact_button-images img{
+            width: 2vh;
+            height: 2vh;
+        }
+    }
+}
+
+
 
 .contact-wrapper{
     width: 100%;
@@ -1344,6 +1413,131 @@ nav .contact_button{
 .contact-wrapper .contact_button .contact_button-images{
     background-color: #Fff;
 }
-.filler{
-    height: 2000vh;
+@media screen and (max-width: 1250px){
+    .contact-wrapper{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .contact-wrapper > div{
+        width: 90%;
+        gap: .5vh;
+    }
+    @media screen and (orientation: portrait){
+        .contact_button{
+            font-size: 1.6vh;
+            padding: .2vh .3vh;
+        }
+            
+        .contact_button-images img{
+            width: 2vh;
+            height: 2vh;
+        }
+    }
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    padding: 4vh 0 0 0;
+    gap: 4vh;
+    align-items: center;
+    width: 100%;
+}
+
+.footer-inner{
+    display: flex;
+    gap: calc(4vh / 3);
+    width: 72%;
+}
+.footer-inner-col1{
+    width: calc(100% / 3);
+}
+.footer-inner-col2 , .footer-inner-col3{
+    width: 12%;
+}
+.footer-inner-col4{
+    margin-left: auto;
+}
+
+
+.footer-links{
+    display: flex;
+    flex-direction: column;
+    gap: .75vh;
+}
+
+.footer-link{
+        text-decoration: none;
+        list-style: none;
+        cursor: pointer;
+        display: flex;
+        align-items: end;
+        justify-content: start;
+        position: relative;
+        color: #1b1d1e;
+        
+        font-size: 1vh;
+        width: fit-content;
+        height: fit-content;
+        padding:0;
+        margin:0;
+}
+.footer-link .nav-link-titles{
+    padding:0;
+    margin:0;
+    height: 2vh;
+}
+.footer-link .nav-link-1{
+    font-size: 1.4vh;
+    text-align: center;
+    
+}
+.footer-link .nav-link-2{
+    font-size: 1.4vh;
+    text-align: center;
+    
+}
+.footer-link:hover .nav-link-1,.footer-link:hover  .nav-link-2 {
+    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
+}
+
+.footer-inner-col4{
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    gap: .75vh;
+}
+.footer-inner-col4 a div {
+    font-size: 1.2vh;
+    padding: .1vh .6vh;
+}
+
+.footer-outer{
+    display: flex;
+    justify-content: space-between;
+    width: 72%;
+    border-top: #e7e7e7 solid 1px;
+    padding: 2vh 0 2vh 0;
+}
+
+.footer-outer a{
+    color: #1b1d1e;
+    padding-left: 1vh;
+}
+
+
+@media screen and (max-width: 1250px){
+    .footer-inner , .footer-outer{
+        flex-direction: column;
+        width: 90%;
+    }
+    .footer-inner > *{
+        width: 100%;
+    }
+    
 }
