--- a/style.css
+++ b/style.css
@@ -902,7 +902,7 @@ nav .contact_button{
 
 
 .work-project-image.img-1{
-    background-image: url(images/gallery/pexels-tranmautritam-251225.jpg);
+    background-image: url(images/Projects/mockup-of-a-woman-taking-her-iphone-12-pro-max-from-her-desk-m28885.png);
 }
 .work-project-image.img-2{
     background-image: url(images/gallery/pexels-format-1029757\ \(1\).jpg);
